--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -6,8 +6,9 @@
     <BODY>
         <H1>States</H1>
         <UL>
-
-            <LI>{{ states }}<B></B></LI>
+            {% for state in states %}
+            <li>{{ state.id }}: {{ state.name }}</li>
+            {% endfor %}
         </UL>
     </BODY>
 </HTML>
