--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -6,8 +6,8 @@
     <BODY>
         <H1>States</H1>
         <UL>
-            {% for state in states %}
-            <li>{{ state.id }}: {{ state.name }}</li>
+            {% for state in states % | sort(attribute='name') %}
+            <li>{{ state.id }}: <b>{{ state.name }}</b></li>
             {% endfor %}
         </UL>
     </BODY>
