--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -5,13 +5,16 @@
     </head>
     <body>
         <H1>States</H1>
-        <UL>{% for state in states %}
-            <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
-            <UL>{% for city in state.cities %}
-            <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
-            {% endfor %}</UL>
+        <UL>
+            {% for state in states | sort(attribute='name') %}
+            <LI>{{ state.id }}: <B>{{ state.name }}</B>
+                <UL>
+                    {% for city in state.cities | sort(attribute='name') %}
+                    <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
+                {% endfor %}
+                </UL>
+            </LI>
             {% endfor %}
         </UL>
     </body>
 </html>
-
